# av1-tui-starter

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  pyproject.toml
.claude/agents/: decision-reviewer.md  qa.md
.claude/commands/: audit-decisions.md  handoff.md  new-decision.md  qa.md
.githooks/: pre-commit
docs/: CONTEXT_GUIDE.md  FRAMEWORK_DIAGRAM.md  GLOSSARY.md  HANDOFF.md
docs/adr/: 0001-use-dual-track-decision-recording.md  0002-choose-textual-as-tui-framework.md  0003-use-ab-av1-as-encoding-backend.md  0004-layered-context-model.md  0005-use-copier-for-template-bootstrap.md  TEMPLATE.md
docs/decisions/: COMMIT_CONVENTION.md  DECISION_LOG.md  EXPERIMENT_NOTES.md  PROTOCOL.md
src/av1_tui/: __init__.py  __main__.py  app.py  encoder.py  file_browser.py
template/: copier.yml
template/project/: CLAUDE.md.jinja  FRAMEWORK_VERSION.md.jinja  MEMORY.md  README.md.jinja
template/project/.claude/agents/: framework-health.md  qa.md.jinja
template/project/.claude/commands/: audit-decisions.md  handoff.md  health.md  plan.md
template/project/.githooks/: pre-commit.jinja
template/project/docs/: FRAMEWORK_DIAGRAM.md  GLOSSARY.md
template/project/docs/adr/: TEMPLATE.md
template/project/docs/decisions/: COMMIT_CONVENTION.md  DECISION_LOG.md.jinja  PROTOCOL.md
tests/: test_encoder.py  test_file_browser.py
