[project]
name = "av1-tui"
version = "0.1.0"
description = "A TUI for batch-converting video files to AV1 with VMAF-targeted quality"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2.2",
]

[project.scripts]
av1-tui = "av1_tui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/av1_tui"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
